--- a/projects/website-example/src/app/login/login.component.html
+++ b/projects/website-example/src/app/login/login.component.html
@@ -1,10 +1,10 @@
 <h1>Login</h1>
 <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <label for="exampleUsername">Username</label>
+    <input type="username" class="form-control" id="exampleUsername" placeholder="Enter username" [(ngModel)]="username">
 </div>
-<!-- <div class="form-group">
+<div class="form-group">
     <label for="exampleInputPassword1">Password</label>
     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-</div> -->
-<button type="submit" class="btn btn-primary" onclick="login()">Submit</button>
+</div>
+<button type="submit" class="btn btn-primary" (click)="login()">Submit</button>
