--- a/projects/share-tool/src/lib/share-tool.component.html
+++ b/projects/share-tool/src/lib/share-tool.component.html
@@ -1,2 +1,2 @@
 <p>My library works</p>
-<tsnt-smart-text-box></tsnt-smart-text-box>
+<tsnt-smart-text-box [userID]="curr_user" [comp_ID]="curr_id"></tsnt-smart-text-box>
