--- a/projects/project-site/src/app/app.component.html
+++ b/projects/project-site/src/app/app.component.html
@@ -1,1 +1,8 @@
+<nav>
+  <a routerLink='Login'       routerLinkActive='active'>Login</a>
+  <a routerLink='Activities'  routerLinkActive='active'>view activities</a>
+</nav>
+
+<button mat-raised-button color="primary" (click)="logoutClick()">Logout</button>
+
 <router-outlet></router-outlet>
