--- a/projects/project-site/src/app/app.component.html
+++ b/projects/project-site/src/app/app.component.html
@@ -5,6 +5,6 @@
 
 <button mat-raised-button color="primary" (click)="logoutClick()">Logout</button> -->
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
 
-<!-- <app-nav></app-nav> -->
+<app-nav></app-nav>
