--- a/projects/project-site/src/app/nav/nav.component.html
+++ b/projects/project-site/src/app/nav/nav.component.html
@@ -1,21 +1,29 @@
 <mat-sidenav-container class="sidenav-container">
+
     <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-        <mat-toolbar>Menu</mat-toolbar>
-        <mat-nav-list>
-            <a *ngFor="let item of menuItems" mat-list-item [routerLink]="'/'+item"> {{item | titlecase}} </a>
-            <!-- <a mat-list-item href="#">Link 1</a>
+        <ng-container *ngIf="!this.router.url.includes('/Login')">
+            <mat-toolbar>Menu</mat-toolbar>
+
+            <mat-nav-list>
+                <!-- <ng-container *ngIf="!this.router.url.includes('/Login')"> -->
+                <a *ngFor="let item of menuItems" mat-list-item [routerLink]="'/'+item"> {{item | titlecase}} </a>
+                <!-- </ng-container> -->
+                <!-- <a mat-list-item href="#">Link 1</a>
             <a mat-list-item href="#">Link 2</a>
             <a mat-list-item href="#">Link 3</a> -->
-        </mat-nav-list>
+            </mat-nav-list>
+        </ng-container>
     </mat-sidenav>
+
     <mat-sidenav-content>
         <mat-toolbar color="primary">
             <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
+            <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+            </button>
             <span></span>
             <!--this is the title for the blue nav-->
         </mat-toolbar>
-        <!-- <router-outlet></router-outlet> -->
+        <!-- <app-dash></app-dash> -->
+        <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
