--- a/projects/project-site/src/app/pages/login/login.component.css
+++ b/projects/project-site/src/app/pages/login/login.component.css
@@ -1,24 +1,31 @@
 .example-form {
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
 }
 
 .example-full-width {
-  width: 100%;
+    width: 100%;
+}
+
+.login-des {
+    zoom: 250%;
+    /* margin-left: auto;
+    margin-right: auto;
+    width: 8em */
 }
 
 label {
-  display: flex;
-  flex-direction: row;
-  text-align: right;
-  width: 400px;
-  color: rgba(22, 57, 75, 0.787)
+    display: flex;
+    flex-direction: row;
+    text-align: right;
+    width: 400px;
+    color: rgba(22, 57, 75, 0.787)
 }
 
 input {
-  height: 20px;
-  flex: 0 0 200px;
+    height: 20px;
+    flex: 0 0 200px;
 }
 
 
@@ -42,13 +49,20 @@ input {
 } */
 
 .demo-3-main-h1 {
-  font-size: 36px;
-  line-height: 40px;
-  margin: 1em 0 .6em 0;
-  font-weight: normal;
-  color: white;
-  font-family: 'Hammersmith One', sans-serif;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
-  position: relative;
-  color: rgba(37, 99, 129, 0.787);
+    font-size: 36px;
+    line-height: 40px;
+    margin: 1em 0 .6em 0;
+    font-weight: normal;
+    color: white;
+    font-family: 'Hammersmith One', sans-serif;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+    position: relative;
+    color: rgba(37, 99, 129, 0.787);
 }
+
+
+/* .container {
+    width: 500px;
+    height: 500px;
+    background: blue;
+} */
