--- a/projects/project-site/src/app/charts/activity-chart/activity-chart.component.html
+++ b/projects/project-site/src/app/charts/activity-chart/activity-chart.component.html
@@ -1,4 +1,4 @@
 <div class="chartContainer" style="display: block;">
-    <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType" [options]="pieChartOptions" [plugins]="pieChartPlugins" [legend]="pieChartLegend">
+    <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [colors]="chartColors" [chartType]="pieChartType" [options]="pieChartOptions" [plugins]="pieChartPlugins" [legend]="pieChartLegend">
   </canvas>
 </div>
