--- a/projects/project-site/src/app/activities/Home/dash/dash.component.html
+++ b/projects/project-site/src/app/activities/Home/dash/dash.component.html
@@ -30,7 +30,7 @@
         </mat-grid-tile> -->
         <!--Table-->
         <mat-grid-tile [colspan]="( cardLayout | async )?.table.cols" [rowspan]="( cardLayout | async )?.table.rows">
-            <app-card title="Card 9">
+            <app-card title="Table of Activities">
                 <div>Table Content Here</div>
             </app-card>
         </mat-grid-tile>
