--- a/projects/project-site/src/app/nav/nav.component.html
+++ b/projects/project-site/src/app/nav/nav.component.html
@@ -5,20 +5,19 @@
             <mat-toolbar>Menu</mat-toolbar>
 
             <mat-nav-list>
-                <!-- <ng-container *ngIf="!this.router.url.includes('/Login')"> -->
                 <a *ngFor="let item of menuItems" mat-list-item [routerLink]="'/'+item"> {{item | titlecase}} </a>
-                <!-- </ng-container> -->
-                <!-- <a mat-list-item href="#">Link 1</a>
-            <a mat-list-item href="#">Link 2</a>
-            <a mat-list-item href="#">Link 3</a> -->
             </mat-nav-list>
         </ng-container>
     </mat-sidenav>
 
     <mat-sidenav-content>
+
         <mat-toolbar color="primary">
             <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
             <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+            </button>
+            <button type="button" mat-icon-button (click)="this.logout()" *ngIf="!this.router.url.includes('/Login')">
+                Logout
             </button>
             <span></span>
             <!--this is the title for the blue nav-->
