commit merge tal branch

--- a/projects/project-site/src/app/activities/change-password/change-password.component.html
+++ b/projects/project-site/src/app/activities/change-password/change-password.component.html
@@ -22,8 +22,8 @@
             </label>
             <p></p>
             <br/>
-            <!-- <button input type="submit" mat-raised-button color="primary" (click)="changePass()">Change Password</button> -->
-            <button input type="submit" mat-raised-button color="primary">Change Password</button>
+            <button input type="submit" mat-raised-button color="primary" (click)="changePassword(currPassInput.value, newPassInput.value, newPassRepInput.value)">Change Password</button>
+            <!-- <button input type="submit" mat-raised-button color="primary">Change Password</button> -->
         </div>
     </mat-card-content>
 </mat-card>
