--- a/projects/website-example/src/app/comapny-login-simulator/comapny-login-simulator.component.html
+++ b/projects/website-example/src/app/comapny-login-simulator/comapny-login-simulator.component.html
@@ -1,4 +1,3 @@
 <app-login></app-login>
-<tsnt-share-tool [user]="get_user()" [comp_id]='34'></tsnt-share-tool>
-<tsnt-share-tool [user]="get_user()" [comp_id]='23'></tsnt-share-tool>
+<tsnt-smart-text-box [userID]="get_user()" [comp_ID]='23'></tsnt-smart-text-box>
 
