continued to work on the view component

--- a/projects/project-site/src/app/activities/view-activities/view-activities.component.html
+++ b/projects/project-site/src/app/activities/view-activities/view-activities.component.html
@@ -1,7 +1,7 @@
 <div>
 
   <a *ngFor="let activity of activities">
-    <pre class="tab">{{ activity.userID }},  {{ activity.actionID }},  {{ activity.editStart }}, {{ activity.editEnd }}</pre>
+    <pre class="tab">{{ activity.userID }}, {{ activity.componentID }},  {{ activity.actionID }},  {{ activity.editStart }}, {{ activity.editEnd }}</pre>
   </a>
 
 
