--- a/projects/share-tool/src/lib/share-tool.component.html
+++ b/projects/share-tool/src/lib/share-tool.component.html
@@ -1,1 +1,1 @@
-<tsnt-smart-text-box [userID]="curr_user" [comp_ID]="curr_id"></tsnt-smart-text-box>
+<smart-text-box [userID]="curr_user" [comp_ID]="curr_id"></smart-text-box>
