--- a/projects/website-example/src/app/comapny-login-simulator/comapny-login-simulator.component.html
+++ b/projects/website-example/src/app/comapny-login-simulator/comapny-login-simulator.component.html
@@ -1,3 +1,10 @@
 <app-login></app-login>
-<tsnt-smart-text-box [userID]="get_user()" [comp_ID]='23'></tsnt-smart-text-box>
+<br>
+<smart-button [isStartButton]="true" [userID]="get_user()" [comp_ID]='23'></smart-button>
+<br>
+<smart-button [isStartButton]="false" [userID]="get_user()" [comp_ID]='23'></smart-button>
+<br>
+<edit-share></edit-share>
+<smart-text-box [userID]="get_user()" [comp_ID]='23'></smart-text-box>
+<smart-text-box [userID]="get_user()" [comp_ID]='34'></smart-text-box>
 
