chanhe comp_id to companyID to avoid ambiguity if component or company

--- a/projects/share-tool/src/lib/share-tool.component.html
+++ b/projects/share-tool/src/lib/share-tool.component.html
@@ -1,2 +1,2 @@
-<edit-share [comp_ID]= "curr_id"></edit-share>
-<smart-text-box [userID]="curr_user" [comp_ID]="curr_id"></smart-text-box>
+<edit-share [companyID]= "curr_id"></edit-share>
+<smart-text-box [userID]="curr_user" [companyID]="curr_id"></smart-text-box>
