--- a/projects/share-tool/src/lib/smart-text-box/smart-text-box.component.html
+++ b/projects/share-tool/src/lib/smart-text-box/smart-text-box.component.html
@@ -1,4 +1,4 @@
-<edit-share [comp_ID]= "comp_ID"></edit-share>
+<edit-share [companyID]= "companyID"></edit-share>
 <form class="example-form">
     <mat-form-field class="example-full-width">
         <mat-label>Smart text box</mat-label>
