--- a/projects/website-example/src/app/comapny-login-simulator/comapny-login-simulator.component.html
+++ b/projects/website-example/src/app/comapny-login-simulator/comapny-login-simulator.component.html
@@ -1,16 +1,18 @@
 <app-login></app-login>
 <br>
-<smart-button [isStartButton]="true" [userID]="get_user()" [comp_ID]='31'></smart-button>
+<smart-button [isStartButton]="true" [userID]="get_user()" [companyID]='31'></smart-button>
 <br>
-<smart-button [isStartButton]="false" [userID]="get_user()" [comp_ID]='31'></smart-button>
+<smart-button [isStartButton]="false" [userID]="get_user()" [companyID]='31'></smart-button>
 <br>
 <br>
-<smart-button [isStartButton]="true" [userID]="get_user()" [comp_ID]='78'></smart-button>
+<smart-button [isStartButton]="true" [userID]="get_user()" [text]="'edit Strat'" [companyID]='78'></smart-button>
 <br>
-<smart-button [isStartButton]="false" [userID]="get_user()" [comp_ID]='78'></smart-button>
+<smart-button [isStartButton]="false" [userID]="get_user()" [text]="'edit end'" [companyID]='78'></smart-button>
+<br>
+<br>
+<smart-text-box [userID]="get_user()" [companyID]='23'></smart-text-box>
+<smart-text-box [userID]="get_user()" [companyID]='34'></smart-text-box>
 <br>
 <br>
 <edit-share></edit-share>
-<smart-text-box [userID]="get_user()" [comp_ID]='23'></smart-text-box>
-<smart-text-box [userID]="get_user()" [comp_ID]='34'></smart-text-box>
 
