added support for a private viewing component

--- a/projects/share-tool/src/lib/edit-share/edit-share.component.html
+++ b/projects/share-tool/src/lib/edit-share/edit-share.component.html
@@ -1,6 +1,7 @@
 <div>
-  <a *ngFor="let editor of editors">
+  <!--<a *ngFor="let editor of editors">
     <pre class="tab">{{ editor }}</pre>
-  </a>
+  </a> -->
+  <pre class="tab">{{ editors }}</pre>
 </div>
 
