--- a/projects/share-tool/src/lib/smart-button/smart-button.component.html
+++ b/projects/share-tool/src/lib/smart-button/smart-button.component.html
@@ -1,2 +1,2 @@
-<edit-share *ngIf="isStartButton" [companyID]= "companyID"></edit-share>
+<edit-share *ngIf="isStartButton" [companyID]= "companyID" [isVisable]="isEditingVisable"></edit-share>
 <button (click)="onClick()">{{text}}</button>
