--- a/projects/website-example/src/app/app.component.html
+++ b/projects/website-example/src/app/app.component.html
@@ -1,6 +1,6 @@
-<nav>
+<!--<nav>
   <a routerLink='managerLogin' routerLinkActive='active'>Manager Login</a>
   <a routerLink='companySite'  routerLinkActive='active'>company's site</a>
-</nav>
+</nav> -->
 
 <router-outlet></router-outlet>
