--- a/projects/website-example/src/app/comapny-login-simulator/comapny-login-simulator.component.html
+++ b/projects/website-example/src/app/comapny-login-simulator/comapny-login-simulator.component.html
@@ -1,11 +1,14 @@
 <app-login></app-login>
 <br>
+<br>
+<br>
+<br>
 <smart-button [isStartButton]="true" [userID]="get_user()" [companyID]='31'></smart-button>
 <br>
 <smart-button [isStartButton]="false" [userID]="get_user()" [companyID]='31'></smart-button>
 <br>
 <br>
-<smart-button [isStartButton]="true" [userID]="get_user()" [text]="'edit Strat'" [companyID]='78'></smart-button>
+<smart-button [isStartButton]="true" [userID]="get_user()" [isEditingVisable]='false' [text]="'edit Strat'" [companyID]='78'></smart-button>
 <br>
 <smart-button [isStartButton]="false" [userID]="get_user()" [text]="'edit end'" [companyID]='78'></smart-button>
 <br>
