--- a/projects/share-tool/src/lib/share-tool.component.html
+++ b/projects/share-tool/src/lib/share-tool.component.html
@@ -1,2 +1,2 @@
-<edit-share [companyID]= "curr_id"></edit-share>
-<smart-text-box [userID]="curr_user" [companyID]="curr_id"></smart-text-box>
+<edit-share [componentID]= "curr_id"></edit-share>
+<smart-text-box [userID]="curr_user" [componentID]="curr_id"></smart-text-box>
