commit ui create manager fix

--- a/projects/project-site/src/app/activities/create-manager/create-manager.component.html
+++ b/projects/project-site/src/app/activities/create-manager/create-manager.component.html
@@ -1,17 +1,23 @@
-<h1 class="demo-3-main-h1">create Manager</h1>
+<mat-card class="dashboard-card">
+    <mat-card-content class="dashboard-card-content">
+        <div>
+            <h1 class="demo-3-main-h1">Create Manager</h1>
+            <br/>
+            <label class="form-group">
+                <input #usernameInput type="username" class="form-control" id="exampleUsername" placeholder="Enter username">
+            </label>
+            <p></p>
+            <br/>
+            <label class="form-group">
+                <input #passwordInput type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter Password">
+            </label>
+            <p></p>
+            <br/>
+            <button mat-raised-button color="primary" (click)="createManamager(usernameInput.value, 'figureoutLater', passwordInput.value)">create</button>
 
-<p class="form-group">
-    <label for="exampleUsername">Username</label>
-    <input #usernameInput type="username" class="form-control" id="exampleUsername" placeholder="Enter username">
-</p>
+
+        </div>
+    </mat-card-content>
 
 
-<div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input #passwordInput type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-</div>
-
-
-<p></p>
-<button mat-raised-button color="primary" (click)="createManamager(usernameInput.value, 'figureoutLater', passwordInput.value)">create</button>
-
+</mat-card>
