--- a/projects/project-site/src/app/nav/nav.component.css
+++ b/projects/project-site/src/app/nav/nav.component.css
@@ -15,3 +15,19 @@
     top: 0;
     z-index: 1;
 }
+
+.ex1 {
+    /* margin-right: 1000px; */
+    font-size: 22px;
+    top: 10px;
+    right: 50px;
+    position: absolute;
+}
+
+.ex2 {
+    /* margin-right: 1000px; */
+    font-size: 22px;
+    top: 15px;
+    left: 20px;
+    position: absolute;
+}
