--- a/projects/project-site/src/app/activities-table/activities-table.component.html
+++ b/projects/project-site/src/app/activities-table/activities-table.component.html
@@ -1,20 +1,26 @@
-<!-- <div>
-    <br>
-    <textarea placeholder="userID" #userFilter></textarea>
-    <br>
-    <textarea placeholder="componentID" #componentFilter></textarea>
-    <br>
-    <textarea placeholder="actionID" #actionFilter></textarea>
-    <br>
-    <input type="datetime-local" placeholder="from date" [ngModel]="filterDateFrom" (ngModelChange)="filterDateFrom = $event">
-    <br>
-    <input type="datetime-local" placeholder="up to date" [ngModel]="filterDateTo" (ngModelChange)="filterDateTo = $event">
-    <br>
-    <button (click)="filter(userFilter.value, componentFilter.value, actionFilter.value)">Filter</button>
-    <br>
-    <br>
-    <br> -->
+<mat-card class="dashboard-card">
+    <mat-card-content class="dashboard-card-content">
 
+        <div class="activities-Filter">
+
+            <p class="form-group">
+                <input #userFilter type="userID" class="form-control" id="exampleUserID" placeholder="userID">
+            </p>
+            <p class="form-group">
+                <input #componentFilter type="componentID" class="form-control" id="examplecomponentID" placeholder="componentID">
+            </p>
+            <p class="form-group">
+                <input #usernameInput type="datetime-local" class="form-control" id="exampleDateFrom" placeholder="from date" [ngModel]="filterDateFrom" (ngModelChange)="filterDateFrom = $event">
+            </p>
+            <p class="form-group">
+                <input #usernameInput type="datetime-local" class="form-control" id="exampleDateTo" placeholder="to date" [ngModel]="filterDateTo" (ngModelChange)="filterDateTo = $event">
+            </p>
+            <button mat-raised-button color="primary" (click)="filter(userFilter.value, componentFilter.value)">Filter</button>
+        </div>
+    </mat-card-content>
+</mat-card>
+<br/>
+<br/>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <!-- UserId Column -->
@@ -44,9 +50,6 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-    <!-- Row shown when there is no matching data.
-    <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-    </tr> -->
+
 
 </table>
