color bar chart add

--- a/projects/project-site/src/app/activities/contact-us/contact-us.component.html
+++ b/projects/project-site/src/app/activities/contact-us/contact-us.component.html
@@ -3,8 +3,8 @@
         <div class="md-form">
             <h1 class="demo-3-main-h1">Who we are</h1>
             <h2 class="demo-3-main-h2">Our customer has web pages where his employees can edit/ view entities. <br/> The services we provide are: a widget that can be embedded on the customer’s web pages that will log who edits/ views an entity. <br/> The users that edit/ view
-                an entity will be able to see which other users are editing/ viewing the same entity at real time. In addition, we will provide a web interface that a higher level user will be able to login and see information about users activity for
-                each existing entity on the customer's web page (eg. who edit/ view, when) <br/>
+                an entity will be able to see which other users are editing/ viewing the same entity at real time. <br/>In addition, we will provide a web interface that a higher level user (eg. Manager user) will be able to login and see information
+                about users activity for each existing entity on the customer's web page (eg. who edit/ view, when) <br/>
                 <h1 class="demo-3-main-h1">Vision</h1>
 
                 Create a dashboard that will show information about the viewed/edited entities in customer's systems. We will offer an injectable code that can be placed within existing website entities. This code will send information about the entities’ viewers and
