--- a/projects/project-site/src/app/activities/contact-us/contact-us.component.css
+++ b/projects/project-site/src/app/activities/contact-us/contact-us.component.css
@@ -1,9 +1,8 @@
 .dashboard-card {
-    /* margin-block-end: 15%; */
     margin-right: 25%;
     margin-left: 17%;
-    margin-top: 5%;
-    height: 750px;
+    /* height: 750px; */
+    display: flex;
 }
 
 .dashboard-card-content {
@@ -37,7 +36,7 @@ input {
     padding-right: 0.4em;
     height: 20px;
     width: 200px;
-    /* flex: 0 0 200px; */
+    flex: 0 0 200px;
 }
 
 .demo-3-main-h1 {
@@ -48,19 +47,19 @@ input {
     color: white;
     font-family: 'Hammersmith One', sans-serif;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
-    position: relative;
+    position: sticky;
     color: rgba(37, 99, 129, 0.787);
 }
 
 .demo-3-main-h2 {
-    font-size: 24px;
+    font-size: 23px;
     line-height: 40px;
     margin: 1em 0 .6em 0;
     font-weight: normal;
     color: white;
     font-family: 'Hammersmith One', sans-serif;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
-    position: relative;
+    position: sticky;
     color: rgba(37, 99, 129, 0.787);
 }
 
