--- a/projects/project-site/src/app/charts/bar-activities-chart/bar-activities-chart.component.html
+++ b/projects/project-site/src/app/charts/bar-activities-chart/bar-activities-chart.component.html
@@ -1,4 +1,4 @@
 <div class="chartContainer" style="display: block">
-    <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [plugins]="barChartPlugins" [legend]="barChartLegend" [chartType]="barChartType">
+    <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [colors]="barChartData[0].backgroundColor" [options]="barChartOptions" [plugins]="barChartPlugins" [legend]="barChartLegend" [chartType]="barChartType">
   </canvas>
 </div>
