added a singke press smart button

--- a/projects/website-example/src/app/comapny-login-simulator/comapny-login-simulator.component.html
+++ b/projects/website-example/src/app/comapny-login-simulator/comapny-login-simulator.component.html
@@ -19,6 +19,7 @@
 <br>
 <br>
 <smart-text-box [userID]="get_user()" [componentID]="'hello!IanText!'"></smart-text-box>
+<smart-single-button [userID]="get_user()" [componentID]="'smart single button!'" [text]="'toggle edit'"></smart-single-button>
 <br>
 <br>
 <edit-share></edit-share>
