added exstra modules to the library

--- a/projects/share-tool/src/lib/share-tool.component.html
+++ b/projects/share-tool/src/lib/share-tool.component.html
@@ -1,1 +1,1 @@
-<smart-text-box [userID]="curr_user" [componentID]="curr_id"></smart-text-box>
+<p>please use components directly! (ie smart-texr-box tag)</p>
